syntax="proto2";

package hit_consistency;

message ConfigurationPBMeta {
    repeated string peers = 1;
    repeated string old_peers = 2;
};

message LogPBMeta {
    required int64 first_log_index = 1;
};

message StablePBMeta {
    required int64 term = 1;
    required string votedfor = 2;
};
